[package]
name = "bevy-balls"
version = "0.1.0"
edition = "2021"

[features]
default = ["render"]
atlas = []
render = []

[dependencies]
bevy = { version = "0.9", default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_asset",
    "png",
    "ktx2",
    "bevy_winit",
    "bevy_text",
    "bevy_sprite",
    "filesystem_watcher",
] }
bevy_ecs_tilemap = "0.9.0"
anyhow = { version = "1.0" }
log = "0.4"
regex = "1.5.4"
serde = "1.0.151"
ldtk_rust = { version = "0.6" }
serde_json = { version = "1.0" }
tiled = { version = "0.9", default-features = false }

[dev-dependencies]
anyhow = { version = "1.0" }
ldtk_rust = { version = "0.6" }
rand = "0.8"
env_logger = "0.9"
serde_json = { version = "1.0" }
tiled = { version = "0.9", default-features = false }

[dev-dependencies.bevy]
version = "0.9"
default-features = false
features = [
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_asset",
    "png",
    "ktx2",
    "bevy_winit",
    "bevy_text",
    "bevy_sprite",
    "filesystem_watcher",
]